--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   Deploy:
     name: Deploy to EC2
-    runs-on: self-hosted
+    runs-on: Jaisons-Laptop
     
     steps:
       - uses: actions/checkout@v4
