--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,13 @@ jobs:
           USER_NAME: ${{secrets.EC2_USERNAME}}
       
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+          # echo ${PRIVATE_KEY} > private_key && chmod 600 private_key
+          # ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
-              # Now we have got the access of EC2 and we will start the deploy .
-              cd /home/ubuntu/maze-generation &&
-              git checkout devops &&
-              git fetch --all &&
-              git reset --hard origin/devops &&
-              git pull origin devops
-              '
+              # # Now we have got the access of EC2 and we will start the deploy .
+              # cd /home/ubuntu/maze-generation &&
+              # git checkout devops &&
+              # git fetch --all &&
+              # git reset --hard origin/devops &&
+              # git pull origin devops
+              # '
