--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           USER_NAME: ${{secrets.EC2_USERNAME}}
       
         run: |
-          # echo ${PRIVATE_KEY} > private_key && chmod 600 private_key
+          echo ${PRIVATE_KEY} > private_key && chmod 600 private_key
           # ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
               # # Now we have got the access of EC2 and we will start the deploy .
