--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,6 @@ jobs:
           HOSTNAME: ${{secrets.SSH_HOST_ADDRESS}}
           USER_NAME: ${{secrets.EC2_USERNAME}}
       
-        run: |
-          echo ${PRIVATE_KEY} > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
+        run: echo ${PRIVATE_KEY} > private_key && chmod 600 private_key
+        run: ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
 
