--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
         env:
           HOSTNAME: ${{secrets.SSH_HOST_ADDRESS}}
           USER_NAME: ${{secrets.EC2_USERNAME}}
-        run:
+        run: |
         ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
 
