--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Get PK
         env:
           PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
-        run: echo ${PRIVATE_KEY} > private_key && chmod 600 private_key 
+        run: echo "$PRIVATE_KEY" > private_key && chmod 600 private_key 
         
       - name: ssh
         env:
