--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,11 @@ jobs:
           HOSTNAME: ${{secrets.EC2_HOST_ADDRESS}}
           USER_NAME: ${{secrets.EC2_USERNAME}}
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME}
-
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+            # Now we have got the access of EC2 and we will start the deploy .
+            cd /home/ubuntu/maze-generation &&
+            git checkout devops &&
+            git fetch --all &&
+            git reset --hard origin/devops &&
+            git pull origin devops
+            '
