--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             # Now we have got the access of EC2 and we will start the deploy .
             cd /home/ubuntu/maze-generation &&
+            if cd maze_generation; then ; else git clone https://github.com/jaison-joseph/maze_generation && cd maze_generation; fi &&
             git checkout devops &&
             git fetch --all &&
             git reset --hard origin/devops &&
