--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Basic check 
         run: |
-          echo "hello there backgroud"
+          echo "hello there "
 
       - name: Checkout
         uses: actions/checkout@v4
