--- a/.github/workflows/self-hosted-workflow.yml
+++ b/.github/workflows/self-hosted-workflow.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  run-on-self-hosted:
+  run-on-macos:
     runs-on: self-hosted
 
     steps:
@@ -15,3 +15,20 @@ jobs:
 
     - name: Run date command
       run: date
+
+    - name: Run whoami command
+      run: whoami
+
+  run-on-ec2:
+    runs-on: Linux
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run date command
+      run: date
+
+    - name: Run whoami command
+      run: whoami
+
